# rpcbf-safety-on-the-fly

./: README.md  pyproject.toml
scripts/: try_dbint_pcbf.py  try_dbint_rpcbf.py  try_segway_pcbf.py  try_segway_rpcbf.py
src/rpcbf/: __init__.py  cbf_rollout.py  cbf_rollout_jax.py  env_noise.py  interp.py  pcbf_rollout.py  pcbf_rollout_jax.py  policies.py  reg_rollout.py  reg_rollout_jax.py
src/rpcbf/dyn/: doubleint_wall.py  odeint.py  segway.py  step_zoh.py  task.py
src/rpcbf/plotting/: plot_levelsets.py  poly_to_patch.py
src/rpcbf/sampler/: sampler.py  uniform_bang_bang_sampler.py  uniform_sampler.py  zero_sampler.py
src/rpcbf/utils/: data_compare_ci.py  helpers.py  hocbf.py  path_utils.py
